subiendo primeros archivos

--- a/css/contacto.css
+++ b/css/contacto.css
@@ -11,7 +11,7 @@
     height: 400px;
     margin-top: 60px;
     background-color: #f1f1f1;
-    background-image: url(/img/contacto.jpg);
+    background-image: url(../img/contacto.jpg);
     background-position: top;
     background-repeat: no-repeat;
     background-size: cover;
