--- a/css/equipo.css
+++ b/css/equipo.css
@@ -11,7 +11,7 @@
     height: 400px;
     margin-top: 60px;
     background-color: #f1f1f1;
-    background-image: url(/img/cepillosdientes.jpg);
+    background-image: url(../img/cepillosdientes.jpg);
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
