--- a/css/inicio.css
+++ b/css/inicio.css
@@ -10,7 +10,7 @@
     height: 400px;
     margin-top: 60px;
     background-color: #f1f1f1;
-    background-image: url(/img/portadadentistainicio.jpg);
+    background-image: url(../img/portadadentistainicio.jpg);
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
